--- a/ShinyStuff/index.html
+++ b/ShinyStuff/index.html
@@ -1,3 +1,118 @@
+<!DOCTYPE html>
+
+<head>
+
+	 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+
+	 
+
+	<script src="js/jquery.min"></script>
+	<script src="js/bootstrap.js"></script>
+
+</head>
 
 
-<h1>Hello World</h1>
+<body>
+
+	
+
+	
+
+		<div class="navbar navbar-inverse navbar-fixed-top">
+		  <div class="navbar-inner">
+		    <ul class="nav">
+		      <li class="active"><a href="./index.html"><i class="icon icon-user"></i> Home</a></li>
+		      <li><a href="./poa.html"><i class="icon icon-fire"></i> Plan of Attack</a></li>
+		      <li><a href="./newtask.html"><i class="icon icon-tasks"></i> Plan a Task</a></li>
+		      <li><a href="./about.html"><i class="icon icon-glass"></i> About Stan</a></li>
+		      <li><a href="#"><i class="icon icon-thumbs-up"></i> Facey-B</a></li>
+		      <li><a href="#">@PlanStan</a></li>
+
+		    </ul>
+		    <div class="pull-right" style="margin-right:8px">
+				<button class="btn btn-primary" type="button"><i class="icon-user icon-white"></i> Sign up</button>
+			</div>
+		  </div>
+		  <div class="pull-right" style="margin-right:10px">
+		  	<small>Already joined? <a href="#">Log in here </a></small>
+		  </div>
+		</div>
+
+
+	<div class="container-fluid">
+
+		<br/><br/><br/><br/>
+
+		<div class="hero-unit">
+			<div>
+				<div>
+				  <h1>Stan</h1>
+				  <p>What's your <b>P</b>lan <b>O</b>f <b>A</b>ttack?</p>
+				</div>
+
+			</div>
+		</div>
+
+		<div class="row-fluid">
+
+
+			<div id="myCarousel" class="carousel slide">
+				<div class="carousel-inner">
+					<div class="active item">
+						<ul class="thumbnails">
+							<li class="span4" align="center">
+							    <div class="thumbnail">
+							      	<img data-src="holder.js/300x200" alt="">
+							      	<h3>Add a Task</h3>
+							      	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							      	<br/><br/>
+							        <button class="btn btn-success" type="button"><i class="icon-user icon-white"></i>  More Information</button>
+							    </div>
+							</li>
+
+							<li class="span4" align="center">
+							    <div class="thumbnail">
+							      	<img data-src="holder.js/300x200" alt="">
+							      	<h3>Plan of Attack</h3>
+							      	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							      	<br/><br/>
+							        <button class="btn btn-danger" type="button"><i class="icon-user icon-white"></i>  More Information</button>
+							    </div>
+							</li>
+
+							<img class="pull-right" src="./img/ninja.jpg" alt="">
+						</ul>
+					</div>
+
+					<div class="item">
+						<img src="./img/ninja.jpg" alt="">
+					</div>
+					<div class="item">
+						<img src="./img/ninja.jpg" alt="">
+					</div>
+					<div class="item">
+						<img src="./img/ninja.jpg" alt="">
+					</div>
+				</div>
+			</div>
+
+			<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+			<a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+		
+		</div>
+
+
+
+	</div>
+
+	
+</div>
+
+
+</body>
+
+<footer>
+
+
+
+</footer>
