Clever Stuff Look at me

--- a/ShinyStuff/index.html
+++ b/ShinyStuff/index.html
@@ -6,8 +6,16 @@
 
 	 
 
-	<script src="js/jquery.min"></script>
-	<script src="js/bootstrap.js"></script>
+	<script src="http://code.jquery.com/jquery-latest.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+
+
+	<style>
+		.carousel-control {
+    		position: absolute; /* already here */
+    		top: 0%;  /* Was top: 40% */
+}
+	</style>
 
 </head>
 
@@ -64,7 +72,7 @@
 							    <div class="thumbnail">
 							      	<img data-src="holder.js/300x200" alt="">
 							      	<h3>Add a Task</h3>
-							      	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							      	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
 							      	<br/><br/>
 							        <button class="btn btn-success" type="button"><i class="icon-user icon-white"></i>  More Information</button>
 							    </div>
@@ -74,18 +82,26 @@
 							    <div class="thumbnail">
 							      	<img data-src="holder.js/300x200" alt="">
 							      	<h3>Plan of Attack</h3>
-							      	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							      	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
 							      	<br/><br/>
 							        <button class="btn btn-danger" type="button"><i class="icon-user icon-white"></i>  More Information</button>
 							    </div>
 							</li>
 
-							<img class="pull-right" src="./img/ninja.jpg" alt="">
+							<li class="span4" align="center">
+							    <div class="thumbnail">
+							      	<img data-src="holder.js/300x200" alt="">
+							      	<h3>Plan of Attack</h3>
+							      	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+							      	<br/><br/>
+							        <button class="btn btn-danger" type="button"><i class="icon-user icon-white"></i>  More Information</button>
+							    </div>
+							</li>
 						</ul>
 					</div>
 
 					<div class="item">
-						<img src="./img/ninja.jpg" alt="">
+						<img src="./img/ninja.jpg" alt="" width="50" height="50">
 					</div>
 					<div class="item">
 						<img src="./img/ninja.jpg" alt="">
@@ -94,11 +110,11 @@
 						<img src="./img/ninja.jpg" alt="">
 					</div>
 				</div>
-			</div>
+			
 
 			<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
 			<a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-		
+		</div>
 		</div>
 
 
